# waylandcraft

./: README.md
native/: Cargo.toml
native/src/: bridge.rs  ddm.rs  egl.rs  lib.rs  output.rs  seat.rs  utils.rs  xdg_spec.rs
src/: main.rs
src/main/java/dev/evvie/waylandcraft/: BufferTexture.java  CursorShape.java  RenderUtils.java  WaylandCraft.java  Window.java  WindowDisplay.java
src/main/java/dev/evvie/waylandcraft/bridge/: WLCBuffer.java  WLCSurface.java  WLCToplevel.java  WaylandCraftBridge.java
src/main/java/dev/evvie/waylandcraft/desktop/: DesktopEntry.java  XDGDesktopManager.java
src/main/java/dev/evvie/waylandcraft/grabs/: MoveGrab.java  PointerGrab.java  PointerGrabMap.java  ResizeGrab.java  WindowGrab.java
src/main/java/dev/evvie/waylandcraft/gui/: SelectorWidget.java  WaylandCraftSettingsScreen.java  WaylandHudRenderer.java  WindowManagerScreen.java
src/main/java/dev/evvie/waylandcraft/item/: InventoryWindowContainer.java  WindowItem.java  WindowItemManager.java
src/main/java/dev/evvie/waylandcraft/mixin/: CreativeModeInventoryScreenMixin.java  GameRendererMixin.java  GuiMixin.java  ICreativeModeInventoryScreenSlotWrapperMixin.java  IMouseHandlerMixin.java  ISlotMixin.java  InventoryMenuMixin.java  InventoryScreenMixin.java  LocalPlayerMixin.java  MinecraftMixin.java  MouseHandlerMixin.java
src/main/java/dev/evvie/waylandcraft/settings/: WaylandCraftSettings.java  WaylandCraftSettingsManager.java
src/main/resources/: waylandcraft.mixins.json
