[package]
name = "waylandcraft"
version = "0.1.0"
edition = "2024"

[lib]
name = "waylandcraft"
crate-type = [ "cdylib" ]

[dependencies]
smithay = { version = "0.7.0", default-features = false, features = [ "wayland_frontend", "backend_drm" ] }
jni = "0.21.1"
libc = { version = "0.2.176", default-features = false }
